#                                               -*- Autoconf -*-

AC_PREREQ([2.69])
AC_INIT([vxi], [0.0.20121206], [Simon.Richter@hogyros.de])
AM_INIT_AUTOMAKE([1.10 foreign])
AM_MAINTAINER_MODE
LT_INIT
AC_CONFIG_SRCDIR([vxi.x])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
